--- a/sprint-evaluation/sprint/sprint0/solution/index.html
+++ b/sprint-evaluation/sprint/sprint0/solution/index.html
@@ -12,27 +12,27 @@
         <p>Thank you for taking the time to help us improve the platform.</p>
 
         <form action="#">
-            <div>
+            <div id="name">
                 <label>Name <br>
-                    <input type="text" name="name" id="name" placeholder="Enter your name">
+                    <input type="text" name="name" id="name" placeholder="Enter your name" required>
                 </label>
-            </div><br>
+            </div><br><br>
 
-            <div>
+            <div id="surname">
                 <label>Surname <br>
-                    <input type="text" name="surname" id="surname" placeholder="Enter your surname">
+                    <input type="text" name="surname" id="surname" placeholder="Enter your surname" required>
                 </label>
-            </div><br>
+            </div><br><br>
 
-            <div>
+            <div id="email">
                 <label>Email <br>
-                    <input type="email" name="email" id="email" placeholder="user@example.com">
+                    <input type="email" name="email" id="email" placeholder="user@example.com" required>
                 </label>
-            </div><br>
+            </div><br><br><br>
 
-            <div>
+            <div id="role">
                 <label>Which option best describes your current role? <br>
-                    <select name="current_role" id="role">
+                    <select name="current_role" id="selectrole" required>
                         <option value="" disabled selected hidden>Select current role</option>
                         <option value="student">Student</option>
                         <option value="teacher">Teacher</option>
@@ -44,8 +44,30 @@
                 </label>
             </div><br>
 
-            <div>
-                <label>What would you like to see improved? (Check all that apply) <br>
+            <div id="recommend">
+                <label>Would you recommend Clarusway to a friend?</label> <br>
+                <label id="rcmd">
+                    <input type="radio" name="recommend" checked>Definitely, Yes <br>
+                    <input type="radio" name="recommend">Maybe <br>
+                    <input type="radio" name="recommend">Not sure <br>
+                    <input type="radio" name="recommend">Definitely, No <br>
+                </label>
+            </div> <br>
+
+            <div id="favorite">
+                <label>What is your favorite feature of Clarusway?</label> <br>
+                <input type="text" name="feature" list="feature" placeholder="Select an option" required>
+                <datalist id="feature">
+                    <option value="Courses"></option>
+                    <option value="Projects"></option>
+                    <option value="Community"></option>
+                    <option value="Mentors"></option>
+                </datalist>
+            </div> <br>
+
+            <div id="improve">
+                <label>What would you like to see improved? (Check all that apply)</label> <br>
+                <label id="improved">
                     <input type="checkbox" name="front-end" id="front-end">Front-end Projects <br>
                     <input type="checkbox" name="back-end" id="back-end">Back-end Projects <br>
                     <input type="checkbox" name="data-science" id="data-science">Data Science <br>
@@ -53,13 +75,13 @@
                 </label>
             </div> <br>
 
-            <div>
+            <div id="comment">
                 <label>Any comments or suggestions? <br>
                     <textarea name="comment" id="comment" cols="30" rows="3" placeholder="enter your comments here"></textarea>
                 </label>
             </div> <br>
 
-            <input type="submit" value="Submit">
+            <input type="submit" value="Submit" id="submit">
         </form>
     </body>
 </html>
